--- a/index.html
+++ b/index.html
@@ -175,12 +175,12 @@
         <div class="stack">
           <div class="card">
             <div><strong>Phone:</strong> <a href="tel:+1-555-555-0199">(555) 555‑0199</a></div>
-            <div style="margin-top:6px"><strong>Email:</strong> <a href="mailto:contact@blackthornsecurity.com">contact@blackthornsecurity.com</a></div>
+            <div style="margin-top:6px"><strong>Email:</strong> <a href="mailto:forestdye13@gmail.com">forestdye13@gmail.com</a></div>
             <div style="margin-top:6px"><strong>License #:</strong> OK‑XXXXXX</div>
             <div style="margin-top:6px"><strong>Location:</strong> Oklahoma • USA</div>
           </div>
           <div class="card">
-            <form method="post" action="mailto:contact@blackthornsecurity.com" enctype="text/plain">
+            <form method="post" action="mailto:forestdye13@gmail.com" enctype="text/plain">
               <div class="row">
                 <input required placeholder="First name" name="first_name" />
                 <input required placeholder="Last name" name="last_name" />
