--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
       <div class="grid-2" style="margin-top:14px">
         <div class="stack">
           <div class="card">
-            <div><strong>Phone:</strong> <a href="tel:+1-555-555-0199">(555) 555‑0199</a></div>
+            <div><strong>Phone:</strong> <a href="tel:+1-555-555-0199">(405) 436-5915</a></div>
             <div style="margin-top:6px"><strong>Email:</strong> <a href="mailto:forestdye13@gmail.com">forestdye13@gmail.com</a></div>
             <div style="margin-top:6px"><strong>License #:</strong> OK‑XXXXXX</div>
             <div style="margin-top:6px"><strong>Location:</strong> Oklahoma • USA</div>
