--- a/index.html
+++ b/index.html
@@ -174,13 +174,17 @@
       <div class="grid-2" style="margin-top:14px">
         <div class="stack">
           <div class="card">
-            <div><strong>Phone:</strong> <a href="tel:+1-555-555-0199">(405) 436-5915</a></div>
-            <div style="margin-top:6px"><strong>Email:</strong> <a href="mailto:forestdye13@gmail.com">forestdye13@gmail.com</a></div>
+            <div><strong>Phone:</strong> <a href="tel:+14054365915">(405) 436‑5915</a></div>
+            <div style="margin-top:6px"><strong>Email:</strong> <a href="mailto:contact@blackthornsecurity.com">contact@blackthornsecurity.com</a></div>
             <div style="margin-top:6px"><strong>License #:</strong> OK‑XXXXXX</div>
-            <div style="margin-top:6px"><strong>Location:</strong> Oklahoma • USA</div>
+            <div style=\"margin-top:6px\"><strong>Location:</strong> Oklahoma City, OK</div>
           </div>
           <div class="card">
-            <form method="post" action="mailto:forestdye13@gmail.com" enctype="text/plain">
+            <form action="https://formsubmit.co/forestdye13@gmail.com" method="POST">
+              <input type="hidden" name="_captcha" value="false">
+              <input type="text" name="_honey" style="display:none">
+              <input type="hidden" name="_subject" value="New Blackthorn quote request">
+              <input type="hidden" name="_template" value="table">
               <div class="row">
                 <input required placeholder="First name" name="first_name" />
                 <input required placeholder="Last name" name="last_name" />
@@ -201,7 +205,7 @@
               </select>
               <textarea style="margin-top:12px" placeholder="Describe your need, dates, location, and hours." name="details"></textarea>
               <button class="btn primary" style="margin-top:12px" type="submit">Submit</button>
-              <div class="sub" style="margin-top:6px;font-size:12px">Submits via your email program. Replace the email in the form action for production.</div>
+              <div class="sub" style="margin-top:6px;font-size:12px">Powered by FormSubmit. You will receive an email confirmation.</div>
             </form>
           </div>
         </div>
