--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #f5f5f5; }
     header { background-color: #0b1d3a; color: white; padding: 2rem; text-align: center; }
     nav a { margin: 0 1rem; color: white; text-decoration: none; }
-    .btn { background-color: #0b1d3a; color: white; padding: 0.75rem 1.5rem; border: none; border-radius: 4px; text-decoration: none; display: inline-block; }
+    .btn { background-color: #0b1d3a; color: #ffffff; padding: 0.75rem 1.5rem; border: none; border-radius: 4px; text-decoration: none; display: inline-block; }
     .btn:hover { background-color: #123466; }
     section { padding: 2rem; background: white; margin: 1rem auto; max-width: 900px; border-radius: 8px; }
     h2 { color: #0b1d3a; }
