--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <h1>Professional, Discreet, and Reliable</h1>
           <p>Veteran-owned and operated. Armed and unarmed officers. C.L.E.E.T. certified (I, II, IV). Licensed and bonded.</p>
           <div style="margin-top:16px">
-            <a class="btn primary" href="#contact">Get a Free Assessment</a>
+            <a class="btn outline" href="#contact">Get a Free Assessment</a>
             <a class="btn outline" href="#services" style="margin-left:8px">Explore Services</a>
           </div>
           <div class="badges">
