--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
           <div class="card">
             <div><strong>Phone:</strong> <a href="tel:+14054365915">(405) 436-5915</a></div>
             <div style="margin-top:6px"><strong>Email:</strong> <a href="mailto:forestdye13@gmail.com">forestdye13@gmail.com</a></div>
-            <div style="margin-top:6px"><strong>License #:</strong> OK-XXXXXX</div>
+            <div style="margin-top:6px"><strong>License #:</strong> OK-0150923</div>
             <div style="margin-top:6px"><strong>Location:</strong> Oklahoma City, OK</div>
           </div>
           <div class="card">
