--- a/index.html
+++ b/index.html
@@ -183,13 +183,13 @@
         <div class="stack">
           <div class="card">
             <div><strong>Phone:</strong> <a href="tel:+14054365915">(405) 436-5915</a></div>
-            <div style="margin-top:6px"><strong>Email:</strong> <a href="mailto:forestdye13@gmail.com">forestdye13@gmail.com</a></div>
+            <div style="margin-top:6px"><strong>Email:</strong> <a href="mailto:blackthornsolutions1@gmail.com">blackthornsolutions1@gmail.com</a></div>
             <div style="margin-top:6px"><strong>License #:</strong> OK-0150923</div>
             <div style="margin-top:6px"><strong>Location:</strong> Oklahoma City, OK</div>
           </div>
           <div class="card">
             <!-- Email form via FormSubmit -->
-            <form action="https://formsubmit.co/forestdye13@gmail.com" method="POST">
+            <form action="https://formsubmit.co/blackthornsolutions1@gmail.com" method="POST">
               <input type="hidden" name="_captcha" value="false">
               <input type="text" name="_honey" style="display:none">
               <input type="hidden" name="_subject" value="New Blackthorn quote request">
