--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Blackthorn Security Solutions LLC | Oklahoma City</title>
-  <meta name="description" content="Veteran‑owned security company in Oklahoma City. Armed and unarmed officers. C.L.E.E.T. certified I, II, IV. Licensed and bonded. 24/7 protection." />
+  <meta name="description" content="Veteran‑owned security company in Oklahoma City. Armed and unarmed officer. C.L.E.E.T. certified I, II, IV. Licensed and bonded. 24/7 protection." />
   <meta name="keywords" content="Oklahoma City security, armed security, unarmed security, CLEET certified, executive protection, event security, veteran owned" />
   <meta name="author" content="Blackthorn Security Solutions LLC" />
   <meta name="theme-color" content="#0b1d3a" />
@@ -121,7 +121,7 @@
       <div class="grid">
         <div>
           <h1 id="main">Professional, Discreet, and Reliable</h1>
-          <p>Veteran‑owned and operated. Armed and unarmed officers. C.L.E.E.T. certified (I, II, IV). Licensed and bonded.</p>
+          <p>Veteran‑owned and operated. Armed and unarmed officer. C.L.E.E.T. certified (I, II, IV). Licensed and bonded.</p>
           <div style="margin-top:16px">
             <a class="btn ghost" href="#contact">Get a Free Assessment</a>
             <a class="btn ghost" href="#services" style="margin-left:8px">Explore Services</a>
@@ -162,7 +162,7 @@
       <div class="card" aria-label="Veteran owned">Veteran Owned & Operated</div>
       <div class="card" aria-label="Licensed and bonded">Licensed & Bonded</div>
       <div class="card" aria-label="CLEET levels">C.L.E.E.T. Certified I, II, IV</div>
-      <div class="card" aria-label="Armed and unarmed">Armed & Unarmed Officers</div>
+      <div class="card" aria-label="Armed and unarmed">Armed & Unarmed officer</div>
     </div>
   </section>
 
@@ -172,7 +172,7 @@
       <h2>Comprehensive Security Services</h2>
       <p class="sub">Scaled to your risk profile and venue. Short‑notice coverage available.</p>
       <div class="grid-3" style="margin-top:14px">
-        <div class="card"><strong>On‑Site & Facility Security</strong><br><span class="sub">Uniformed officers, access control, visitor management, incident reporting.</span></div>
+        <div class="card"><strong>On‑Site & Facility Security</strong><br><span class="sub">Uniformed officer, access control, visitor management, incident reporting.</span></div>
         <div class="card"><strong>Event Security</strong><br><span class="sub">Crowd management, ticketing support, VIP areas, entry screening.</span></div>
         <div class="card"><strong>Executive Protection</strong><br><span class="sub">Discreet close protection, advance work, route planning, residential.</span></div>
         <div class="card"><strong>Mobile Patrol</strong><br><span class="sub">Marked/unmarked patrols, perimeter checks, alarm response, lock/unlock.</span></div>
@@ -221,7 +221,7 @@
       <div class="grid-3" style="margin-top:14px">
         <div class="step"><div class="n">1</div><strong>Assess</strong><br><span class="sub">Brief call to define threats, environment, and objectives.</span></div>
         <div class="step"><div class="n">2</div><strong>Plan</strong><br><span class="sub">We craft post orders, staffing, and reporting cadence.</span></div>
-        <div class="step"><div class="n">3</div><strong>Protect</strong><br><span class="sub">Deploy officers. Monitor. Iterate with clear KPIs.</span></div>
+        <div class="step"><div class="n">3</div><strong>Protect</strong><br><span class="sub">Deploy officer. Monitor. Iterate with clear KPIs.</span></div>
       </div>
     </div>
   </section>
@@ -231,12 +231,12 @@
     <div class="container">
       <h2>Common questions</h2>
       <details>
-        <summary>Are your officers C.L.E.E.T. certified?</summary>
-        <p class="sub">Yes. Levels I, II, and IV. We match certification to the assignment requirements.</p>
+        <summary>Are you C.L.E.E.T. certified?</summary>
+        <p class="sub">Yes. Levels I, II, and IV. I match certification to the assignment requirements.</p>
       </details>
       <details>
         <summary>Do you provide armed and unarmed coverage?</summary>
-        <p class="sub">Yes. We scope risk and local ordinances first, then recommend armed or unarmed with rationale.</p>
+        <p class="sub">Yes. I scope risk and local ordinances first, then recommend armed or unarmed with rationale.</p>
       </details>
       <details>
         <summary>How fast can you start?</summary>
@@ -244,7 +244,7 @@
       </details>
       <details>
         <summary>Do you carry insurance and bonds?</summary>
-        <p class="sub">Yes. Certificates available upon request. We are licensed and bonded in Oklahoma.</p>
+        <p class="sub">Yes. Certificates available upon request. I am licensed and bonded in Oklahoma.</p>
       </details>
     </div>
   </section>
