--- a/index.html
+++ b/index.html
@@ -207,9 +207,9 @@
     <div class="container">
       <h2>What clients report</h2>
       <div class="grid-3" style="margin-top:14px">
-        <div class="card quote"><p>“Clear post orders and visible patrols cut vandalism incidents to zero for our site within two weeks.”</p><div class="who">Facilities Manager, OKC</div></div>
-        <div class="card quote"><p>“Professional at the gate and discreet with our VIPs. We rehired for every event this season.”</p><div class="who">Events Director, Edmond</div></div>
-        <div class="card quote"><p>“Daily activity reports with photos made accountability simple for our property team.”</p><div class="who">Property Owner, Moore</div></div>
+        <div class="card quote"><p>“The most reliable security I've had thus far, excellent communication and shows the importance of safety.”</p><div class="who">Tristan Lake, OKC</div></div>
+        <div class="card quote"><p>“Put Review Here”</p><div class="who">Random Person, Edmond</div></div>
+        <div class="card quote"><p>“Review will be placed here”</p><div class="who">Random Owner, Moore</div></div>
       </div>
     </div>
   </section>
